<resources>
    <string name="app_name">AIMAOS Mobile</string>
    <string name="title_server_settings">AIMAOS Server Connection</string>
    <string name="label_server_url">Server URL (e.g., https://aimaos.local or http://192.168.1.50:8000)</string>
    <string name="label_access_token">Access Token (AIMAOS_UI_TOKEN)</string>
    <string name="hint_server_url">http://192.168.1.X:8000</string>
    <string name="hint_access_token">Enter AIMAOS_UI_TOKEN</string>
    <string name="button_test_connection">Test &amp; Save</string>
    <string name="button_change_settings">Settings</string>
    <string name="button_retry">Retry Connection</string>
    <string name="error_connection_failed">Could not connect to AIMAOS server. Please check the URL, network connection, or token authorization.</string>
    <string name="error_token_required">Access token (AIMAOS_UI_TOKEN) is required for non-loopback server access.</string>
    <string name="success_connection">Connected &amp; authenticated successfully!</string>
    <string name="biometric_prompt_title">Unlock AIMAOS Mobile</string>
    <string name="biometric_prompt_subtitle">Authenticate to access saved server credentials</string>
    <string name="biometric_prompt_negative">Cancel</string>
</resources>
